--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "devDependencies": {
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0",
+        "sass": "^1.77.6",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "@vitejs/plugin-vue": "^5.0.5",
+        "vue": "^3.4.30"
     }
 }
