--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 APP_NAME=Einkaufsliste
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:m6D4+cZQKz96bqYuwJG4PvI9TSNDQgn8yYOIfrv1zeQ=
 APP_DEBUG=true
 APP_TIMEZONE=CET
-APP_URL=http://localhost
+APP_URL=http://127.0.0.1
 
 APP_LOCALE=de
 APP_FALLBACK_LOCALE=de
